[tool.poetry]
name = "aula-06"
version = "0.1.0"
description = ""
authors = ["FernandoMS4 <fernando381046@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
taskipy = "^1.14.1"
pre-commit = "^4.0.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = """
isort main.py
black main.py
flake8 main.py
"""